Gaia: initial deployment of docker.